COMMERCE-7414 Build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Поръчки
 commerce-order-items=Търговски поръчки (Automatic Translation)
 commerce-order-items-help=Представлява списъка с елементи на поръчки за търговия, който се показва. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Търговски поръчки (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Търговска организация Отворена поръчка (Automatic Translation)
