--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -1992,6 +1992,7 @@ commerce-order=Comanda de comerç
 commerce-order-content-web-portlet-instance-configuration-name=Comandes
 commerce-order-items=Articles de comanda de comerç
 commerce-order-items-help=Representa la llista d'articles de comanda de comerç que es mostra.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Tipus de comanda
 commerce-orders=Comandes de comerç
 commerce-organization-open-order-web-portlet-instance-configuration-name=Comanda oberta d'organització de comerç
