--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -1992,6 +1992,7 @@ commerce-order=Pedido de comercio
 commerce-order-content-web-portlet-instance-configuration-name=Pedidos
 commerce-order-items=Artículos del pedido de comercio
 commerce-order-items-help=Representa la lista de artículos del pedido de comercio que se muestra.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Tipos de pedido
 commerce-orders=Pedidos de comercio
 commerce-organization-open-order-web-portlet-instance-configuration-name=Pedido abierto de organización de comercio
