--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Tellimused
 commerce-order-items=Commerce Orderi kaubad (Automatic Translation)
 commerce-order-items-help=Tähistab kuvatavate kaubandustellimuse kaupade loendit. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Kaubandustellimused (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Äriorganisatsiooni avatud tellimus (Automatic Translation)
