--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=लगाए गए आदेश
 commerce-order-items=वाणिज्य ऑर्डर आइटम
 commerce-order-items-help=प्रदर्शित किए जाने वाले वाणिज्य ऑर्डर आइटमों की सूची का प्रतिनिधित्व करता है।
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=वाणिज्य आदेश
 commerce-organization-open-order-web-portlet-instance-configuration-name=वाणिज्य संगठन खुला आदेश
