--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -1992,6 +1992,7 @@ commerce-order=Kereskedelmi rendelés
 commerce-order-content-web-portlet-instance-configuration-name=Rendelések
 commerce-order-items=Megrendelés elemei
 commerce-order-items-help=A megjelenített megrendelési elemek listáját képviseli.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Rendeléstípusok
 commerce-orders=Kereskedelmi rendelések
 commerce-organization-open-order-web-portlet-instance-configuration-name=Nyitott kereskedelmi szervezeti megrendelések
