--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -1992,6 +1992,7 @@ commerce-order=הזמנת מסחר
 commerce-order-content-web-portlet-instance-configuration-name=הזמנות
 commerce-order-items=פריטי הזמנת מסחר
 commerce-order-items-help=מייצג את רשימת פריטי הזמנות המסחר המוצגת.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=הזמנות מסחר (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=סדר פתוח של ארגון מסחר (Automatic Translation)
