--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -1992,6 +1992,7 @@ commerce-order=コマース注文
 commerce-order-content-web-portlet-instance-configuration-name=注文
 commerce-order-items=注文商品
 commerce-order-items-help=表示されている注文商品のリストを表します。
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=注文タイプ
 commerce-orders=コマース注文
 commerce-organization-open-order-web-portlet-instance-configuration-name=商業組織の未処理注文
