--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=명령
 commerce-order-items=상거래 주문 항목 (Automatic Translation)
 commerce-order-items-help=표시되는 상거래 주문 항목 목록을 나타냅니다. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=상거래 주문 (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=상거래 조직 오픈 오더 (Automatic Translation)
