--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Pateikti užsakymai (Automatic Translation)
 commerce-order-items=Komercijos užsakymo prekės (Automatic Translation)
 commerce-order-items-help=Nurodo rodomų komercijos užsakymo prekių sąrašą. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Komercijos užsakymai (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Komercijos organizacijos atviras užsakymas (Automatic Translation)
