--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Bestillinger
 commerce-order-items=Handelsordrevarer (Automatic Translation)
 commerce-order-items-help=Representerer listen over handelsordrevarer som vises. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Handelsordrer (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Åpen ordre for handelsorganisasjon (Automatic Translation)
