--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -1992,6 +1992,7 @@ commerce-order=Handelsorder
 commerce-order-content-web-portlet-instance-configuration-name=Bestellingen
 commerce-order-items=Handelsorderitems
 commerce-order-items-help=Dit is de lijst met bestelde items die weergegeven wordt.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Bestellingtypes
 commerce-orders=Handelsorders
 commerce-organization-open-order-web-portlet-instance-configuration-name=Openstaande Order Handelsorganisatie
