--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1992,6 +1992,7 @@ commerce-order=Pedido do comércio
 commerce-order-content-web-portlet-instance-configuration-name=Pedidos
 commerce-order-items=Itens do Pedido Comercial
 commerce-order-items-help=Representa a lista a ser exibida dos itens do pedido.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Tipos de pedidos
 commerce-orders=Pedidos comerciais
 commerce-organization-open-order-web-portlet-instance-configuration-name=Pedido aberto de organização comercial
