--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Pedidos
 commerce-order-items=Itens de ordem de comércio (Automatic Translation)
 commerce-order-items-help=Representa a lista de itens de pedidos de comércio que são exibidos. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Ordens de Comércio (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Ordem Aberta da Organização do Comércio (Automatic Translation)
