--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Заказы
 commerce-order-items=Товары для заказа (Automatic Translation)
 commerce-order-items-help=Представляет список отображаемых элементов заказа на коммерцию. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Коммерческие заказы (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Коммерческая организация Открытый заказ (Automatic Translation)
