--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Naročila
 commerce-order-items=Artikli trgovinskega naloga (Automatic Translation)
 commerce-order-items-help=Predstavlja seznam prikazanih elementov trgovinskega naloga. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Trgovinski nalogi (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Odpri naročilo trgovinske organizacije (Automatic Translation)
