--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=İstekler
 commerce-order-items=Ticaret Sipariş Maddeleri (Automatic Translation)
 commerce-order-items-help=Görüntülenen ticaret siparişi maddelerinin listesini temsil eder. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Ticaret Siparişleri (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Commerce Organization Açık Sipariş (Automatic Translation)
