--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Замовлення
 commerce-order-items=Товари для замовлення комерції (Automatic Translation)
 commerce-order-items-help=У представляє список відображуваних елементів замовлення на комерційну торгівлю. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Комерційні замовлення (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Відкритий порядок комерційної організації (Automatic Translation)
