--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce 訂單
 commerce-order-content-web-portlet-instance-configuration-name=訂單
 commerce-order-items=Commerce 訂單項目
 commerce-order-items-help=表示顯示的 Commerce 訂單條目清單。
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=訂單類型
 commerce-orders=Commerce 訂單
 commerce-organization-open-order-web-portlet-instance-configuration-name=Commerce 組織未結訂單
