--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -1992,6 +1992,7 @@ commerce-order=طلب تجاري
 commerce-order-content-web-portlet-instance-configuration-name=الطلبات
 commerce-order-items=عناصر الطلب التجاري
 commerce-order-items-help=يمثل قائمة عناصر الطلب التجاري المعروضة.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=أنواع الأمر
 commerce-orders=الطلبات التجارية
 commerce-organization-open-order-web-portlet-instance-configuration-name=طلب مفتوح لمنظمة تجارية
