--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Objednávky
 commerce-order-items=Položky obchodní objednávky (Automatic Translation)
 commerce-order-items-help=Představuje seznam zobrazených položek obchodní objednávky. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Obchodní objednávky (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Otevřená objednávka obchodní organizace (Automatic Translation)
