--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Afgav ordrer (Automatic Translation)
 commerce-order-items=Varer til commerce-ordre (Automatic Translation)
 commerce-order-items-help=Repræsenterer listen over handelsordreelementer, der vises. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Handelsordrer (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Åbn ordre for Commerce Organization (Automatic Translation)
