--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -1992,6 +1992,7 @@ commerce-order=Handelsbestellung
 commerce-order-content-web-portlet-instance-configuration-name=Aufträge
 commerce-order-items=Handelsauftragspositionen
 commerce-order-items-help=Stellt die Liste der Handelsauftragspositionen dar, die angezeigt wird.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Bestellungstypen
 commerce-orders=Handelsbestellungen
 commerce-organization-open-order-web-portlet-instance-configuration-name=Offene Bestellung der Handelsorganisation
