--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Παραγγελίες
 commerce-order-items=Στοιχεία παραγγελίας εμπορίου (Automatic Translation)
 commerce-order-items-help=Αντιπροσωπεύει τη λίστα των στοιχείων παραγγελίας εμπορίου που εμφανίζεται. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Παραγγελίες Εμπορίου (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Ανοικτή παραγγελία οργανισμού εμπορίου (Automatic Translation)
