--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -1992,6 +1992,7 @@ commerce-order=سفارش تجازی
 commerce-order-content-web-portlet-instance-configuration-name=سفارشات
 commerce-order-items=اقلام سفارش تجاری
 commerce-order-items-help=لیست اقلام سفارشات بازرگانی نمایش داده شده را نشان می دهد.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=سفارشات بازرگانی
 commerce-organization-open-order-web-portlet-instance-configuration-name=سفارش باز سازمان بازرگانی
