--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -1992,6 +1992,7 @@ commerce-order=Kauppatilaus
 commerce-order-content-web-portlet-instance-configuration-name=Tilaukset
 commerce-order-items=Ostosten Tilaustuotteet
 commerce-order-items-help=Edustaa näytettävää luetteloa ostostilauksen tuotteista.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Tilaustyypit
 commerce-orders=Kauppatilaukset
 commerce-organization-open-order-web-portlet-instance-configuration-name=Kauppaorganisaation Avoin Tilaus
