--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commande commerciale
 commerce-order-content-web-portlet-instance-configuration-name=Commandes
 commerce-order-items=Articles de commande commerciale
 commerce-order-items-help=Représente la liste affichée des éléments de commande commerciale.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Types de commande
 commerce-orders=Commandes commerciales
 commerce-organization-open-order-web-portlet-instance-configuration-name=Commande ouverte d'organisation commerciale
