--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Pesanan
 commerce-order-items=Item Pesanan Perdagangan (Automatic Translation)
 commerce-order-items-help=Mewakili daftar item pesanan perdagangan yang ditampilkan. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Pesanan Perdagangan (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Organisasi Perdagangan Open Order (Automatic Translation)
