--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Ordini
 commerce-order-items=Articoli per ordini commerciali (Automatic Translation)
 commerce-order-items-help=Rappresenta l'elenco degli articoli degli ordini commerciali visualizzati. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Ordini di commercio (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Ordine aperto organizzazione commerciale (Automatic Translation)
