--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Pesanan Yang Diletakkan (Automatic Translation)
 commerce-order-items=Item Pesanan Perdagangan (Automatic Translation)
 commerce-order-items-help=Mewakili senarai item pesanan perdagangan yang dipaparkan. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Perintah Perdagangan (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Perintah Terbuka Organisasi Perdagangan (Automatic Translation)
