--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Zamówienia
 commerce-order-items=Elementy zamówienia handlowego (Automatic Translation)
 commerce-order-items-help=Reprezentuje listę elementów zamówienia handlowego, które są wyświetlane. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Zamówienia handlowe (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Zlecenie otwarte dla organizacji handlowej (Automatic Translation)
