--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Comenzi
 commerce-order-items=Articole comandă comerț (Automatic Translation)
 commerce-order-items-help=Reprezintă lista de articole de comandă de comerț care se afișează. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Comenzi comerciale (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Ordine deschisă a organizației comerciale (Automatic Translation)
