--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Objednávky
 commerce-order-items=Položky obchodnej objednávky (Automatic Translation)
 commerce-order-items-help=Predstavuje zoznam zobrazených položiek obchodnej objednávky. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Obchodné objednávky (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Otvorená objednávka organizácie Commerce (Automatic Translation)
