--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -1992,6 +1992,7 @@ commerce-order=Handelsbeställning
 commerce-order-content-web-portlet-instance-configuration-name=Beställningar
 commerce-order-items=Orderartiklar för handel
 commerce-order-items-help=Representerar listan med orderartiklar för handel som visas.
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Ordertyper
 commerce-orders=Handelsbeställningar
 commerce-organization-open-order-web-portlet-instance-configuration-name=Öppen beställning för handelsorganisation
