--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=คําสั่งซื้อที่วาง (Automatic Translation)
 commerce-order-items=สินค้าในใบสั่งการค้า (Automatic Translation)
 commerce-order-items-help=แสดงรายการสินค้าในใบสั่งการค้าที่แสดง (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=ใบสั่งการค้า (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=ใบสั่งเปิดองค์กรการค้า (Automatic Translation)
