--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -1992,6 +1992,7 @@ commerce-order=Commerce Order (Automatic Copy)
 commerce-order-content-web-portlet-instance-configuration-name=Đơn đặt hàng
 commerce-order-items=Mặt hàng đặt hàng thương mại (Automatic Translation)
 commerce-order-items-help=Đại diện cho danh sách các mặt hàng đặt hàng thương mại được hiển thị. (Automatic Translation)
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=Order Types (Automatic Copy)
 commerce-orders=Đơn đặt hàng thương mại (Automatic Translation)
 commerce-organization-open-order-web-portlet-instance-configuration-name=Đơn đặt hàng mở của tổ chức thương mại (Automatic Translation)
