--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1992,6 +1992,7 @@ commerce-order=商务订单
 commerce-order-content-web-portlet-instance-configuration-name=排序
 commerce-order-items=商务订单条目
 commerce-order-items-help=表示显示的商务订单条目列表。
+commerce-order-rule-entry-configuration-name=Order Rules (Automatic Copy)
 commerce-order-type-configuration-name=订单类型
 commerce-orders=商务订单
 commerce-organization-open-order-web-portlet-instance-configuration-name=商务组织未结订单
