LPS-140212 Build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -798,6 +798,7 @@ api-account-id=ID del compte de l'API
 api-endpoint=Extrem de l'API
 api-endpoint-description=Estableix l'extrem de Computer Vision API V2 (p. ex.: {0}). Vegeu {1} per obtenir més informació.
 api-login-id=ID de connexió de l'API
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=URL de l'API
 api-username=ID de l'usuari de l'API
 app-id=ID de l'aplicació
