--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -798,6 +798,7 @@ api-account-id=API-Konto-ID
 api-endpoint=API-Endpunkt
 api-endpoint-description=Setzt den Endpunkt für die Computer Vision API V2 (z.B. {0}). Siehe {1} für weitere Informationen.
 api-login-id=API-Login-ID
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API-URL
 api-username=API-Benutzer-ID
 app-id=App-ID
