--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -798,6 +798,7 @@ api-account-id=Identificador de cuenta de la API
 api-endpoint=Endpoint de la API
 api-endpoint-description=Establece el endpoint de la API de Computer Vision v2 (por ejemplo, {0}). Para obtener más información, consulte {1}.
 api-login-id=Identificador de inicio de sesión de la API
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=URL de la API
 api-username=Identificador de usuario de la API
 app-id=Identificador de aplicación
