--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -798,6 +798,7 @@ api-account-id=API-tilin ID
 api-endpoint=API-päätepisteet
 api-endpoint-description=Asettaa päätepisteen Computer Vision API V2:lle (esim. {0}). Katso lisätietoja kohdasta {1}.
 api-login-id=API-käyttäjätunnus
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL
 api-username=API-käyttäjän ID
 app-id=Sovellustunnus
