--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -798,6 +798,7 @@ api-account-id=ID de compte de l'API
 api-endpoint=Point de terminaison de l'API
 api-endpoint-description=Définit le point de terminaison de l'API V2 Computer Vision (par ex. : {0}). Consultez {1} pour plus d'informations.
 api-login-id=ID de connexion API
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=URL de L'API
 api-username=ID utilisateur de l'API
 app-id=ID de l'application
