--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -798,6 +798,7 @@ api-account-id=API fiókazonosítója
 api-endpoint=API végpont
 api-endpoint-description=Beállítja a végpontot a Computer Vision API V2 számára (pl. {0}). További tudnivalók lásd: {1}.
 api-login-id=API bejelentkezési azonosító
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL
 api-username=API felhasználói azonosítója
 app-id=Alkalmazás azonosítója
