--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -798,6 +798,7 @@ api-account-id=API-konto-ID (Automatic Translation)
 api-endpoint=API-koblingspunkt
 api-endpoint-description=Angi koblingspunkt for Computer Vision API V2 (e.g. {0}). Se {1} for mer informasjon.
 api-login-id=PÅLOGGINGS-ID for API (Automatic Translation)
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=BRUKER-ID for API (Automatic Translation)
 app-id=App-ID (Automatic Translation)
