--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -798,6 +798,7 @@ api-account-id=Account-ID API
 api-endpoint=API-eindpunt
 api-endpoint-description=Stelt het eindpunt voor de Computer Vision API V2 (bijv. {0}). Zie {1} voor meer informatie.
 api-login-id=Login-ID API
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL
 api-username=Gebruikers-ID API
 app-id=App-ID
