--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -798,6 +798,7 @@ api-account-id=ID da conta API
 api-endpoint=Ponto de Extremidade da API
 api-endpoint-description=Define o endpoint para a API V2 do visual computacional (por exemplo, {0}). Consulte {1} para obter mais informações.
 api-login-id=ID de login da API
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=URL da API
 api-username=ID do usuário API
 app-id=ID de aplicativo
