--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -798,6 +798,7 @@ api-account-id=ID da conta API (Automatic Translation)
 api-endpoint=Ponto final da API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API Login ID (Automatic Translation)
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ID do usuário da API (Automatic Translation)
 app-id=ID do aplicativo (Automatic Translation)
