--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -798,6 +798,7 @@ api-account-id=API-konto-ID
 api-endpoint=API-slutpunkt
 api-endpoint-description=Ställer in slutpunkt för Computer Vision API V2 (t.ex. {0}). Se {1} för mer information.
 api-login-id=API-inloggnings-ID
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API-URL
 api-username=API-användar-ID
 app-id=App-ID
