--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -798,6 +798,7 @@ api-account-id=รหัสบัญชี API (Automatic Translation)
 api-endpoint=API เอ็นพ้อยท์
 api-endpoint-description=กำหนดจุดสิ้นสุดสำหรับ Computer Vision API V2 (เช่น {0}) ดู {1} สำหรับข้อมูลเพิ่มเติม
 api-login-id=ID ล็อกอิน API (Automatic Translation)
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=รหัสผู้ใช้ API (Automatic Translation)
 app-id=รหัสแอป (Automatic Translation)
