--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -798,6 +798,7 @@ api-account-id=API Hesap Kimliği (Automatic Translation)
 api-endpoint=API Bitiş Noktası (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API Oturum Açma Kimliği (Automatic Translation)
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=API Kullanıcı Kimliği (Automatic Translation)
 app-id=Uygulama Kimliği (Automatic Translation)
