--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -798,6 +798,7 @@ api-account-id=API 帐户 ID
 api-endpoint=API 端点
 api-endpoint-description=设置 Computer Vision API V2 的端点（例如 {0}）。如需了解更多信息，请参阅{1}。
 api-login-id=API 登录 ID
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL
 api-username=API 用户 ID
 app-id=应用 ID
