--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -798,6 +798,7 @@ api-account-id=API 帳戶 ID
 api-endpoint=API 端點
 api-endpoint-description=設置 Computer Vision API V2 的端點（例如 {0}）。如需瞭解更多資訊，請參閱 {1}。
 api-login-id=API 登入 ID
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL
 api-username=API 用戶 ID
 app-id=App ID
