--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -798,6 +798,7 @@ api-account-id=معرف حساب API
 api-endpoint=نقطة نهاية واجهة API
 api-endpoint-description=يعين نقطة نهاية لـ Computer Vision API V2 (مثل {0}). راجع {1} لمزيد من المعلومات.
 api-login-id=رمز دخول API
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=عنوان URL لواجهة برمجة التطبيقات
 api-username=معرف مستخدم API
 app-id=معرف التطبيق
