--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -798,6 +798,7 @@ api-account-id=ИД на профил на API (Automatic Translation)
 api-endpoint=Крайна точка на API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=ИД за вход в API (Automatic Translation)
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=ПОТРЕБИТЕЛСКИ ИД на API (Automatic Translation)
 app-id=ИД на приложение (Automatic Translation)
