--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -798,6 +798,7 @@ api-account-id=API konto ID (Automatic Translation)
 api-endpoint=API lõpp-punkt (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=API sisselogimise ID (Automatic Translation)
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=API kasutaja ID (Automatic Translation)
 app-id=Rakenduse ID (Automatic Translation)
