--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -798,6 +798,7 @@ api-account-id=एपीआई खाता आईडी (Automatic Translation)
 api-endpoint=एपीआई एंडपॉइंट (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=एपीआई लॉगिन आईडी
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=एपीआई यूजर आईडी (Automatic Translation)
 app-id=ऐप आईडी (Automatic Translation)
