--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -798,6 +798,7 @@ api-account-id=מזהה חשבון API (Automatic Translation)
 api-endpoint=נקודת קצה של API (Automatic Translation)
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information. (Automatic Copy)
 api-login-id=מזהה כניסה של API (Automatic Translation)
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=כתובת URL של ה-API
 api-username=מזהה משתמש של API (Automatic Translation)
 app-id=מזהה אפליקציה (Automatic Translation)
