--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -798,6 +798,7 @@ api-account-id=API アカウント ID
 api-endpoint=APIエンドポイント
 api-endpoint-description=Computer Vision API V2のエンドポイントを設定します（例：{0}）。詳細は{1}をご覧ください。
 api-login-id=API ログイン ID
+api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
 api-url=API の URL
 api-username=API ユーザー ID
 app-id=App ID
